--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,7 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <li><a ng-href="#/login">Login</a></li>
         </ul>
         <h3 class="text-muted">test</h3>
       </div>
@@ -34,7 +33,6 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
     </div>
 
