--- a/app/index.html
+++ b/app/index.html
@@ -21,20 +21,22 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <!--
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/login">Login</a></li>
         </ul>
-        <h3 class="text-muted">test</h3>
+        <h3 class="text-muted">Cross</h3>
       </div>
 
-      <div ng-view=""></div>
 
       <div class="footer">
       </div>
     </div>
+    -->
+      <div ui-view></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -77,8 +79,10 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/services.js"></script>
+        <script src="scripts/config.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/overview/overview.js"></script>
         <!-- endbuild -->
 </body>
 </html>
