--- a/app/index.html
+++ b/app/index.html
@@ -21,26 +21,14 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <!--
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/login">Login</a></li>
-        </ul>
-        <h3 class="text-muted">Cross</h3>
-      </div>
-
-
-      <div class="footer">
-      </div>
+    <ng-include src="'views/common/_nav_top.html'"></ng-include>
+    <div ui-view>
     </div>
-    -->
-      <div ui-view></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
+       /*
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -48,6 +36,7 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
+       */
     </script>
 
     <!-- build:js(.) scripts/oldieshim.js -->
