--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/services.js"></script>
         <script src="scripts/config.js"></script>
+        <script src="scripts/ng-grid-flexible-height.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/overview/overview.js"></script>
