--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,9 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/top_bar.css">
-    <link rel="stylesheet" href="styles/left_bar.css">
     <link rel="stylesheet" href="styles/instances.css">
     <!-- endbuild -->
   </head>
@@ -24,12 +24,10 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
     <div ui-view>
     </div>
 
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <!-- Google Analytics -->
      <script>
        /*
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -69,16 +67,31 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/services.js"></script>
-        <script src="scripts/config.js"></script>
-        <script src="scripts/ng-grid-flexible-height.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/overview/overview.js"></script>
-        <script src="scripts/controllers/user/user.js"></script>
-        <script src="scripts/controllers/instances/instances.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/settings.js"></script>
+    <script src="scripts/common/base.js"></script>
+    <script src="scripts/common/register.js"></script>
+    <script src="scripts/common/api/base.js"></script>
+    <script src="scripts/common/api/keystone.js"></script>
+    <script src="scripts/common/api/nova.js"></script>
+    <script src="scripts/app.js"></script>
+    <script src="scripts/services.js"></script>
+    <script src="scripts/filters.js"></script>
+    <script src="scripts/config.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/login.js"></script>
+    <script src="scripts/controllers/user/user.js"></script>
+    <script src="scripts/common/plugin/ng-grid-flexible-height.js"></script>
+    <!-- endbuild -->
+    <script src="scripts/dashboards/admin/app.js"></script>
+    <script src="scripts/dashboards/menu/app.js"></script>
+    <div id="cross_dashboard_admin_apps">
+      <script src="scripts/dashboards/admin/overview/app.js"></script>
+      <script src="scripts/dashboards/admin/overview/controllers/index.js"></script>
+      <script src="scripts/dashboards/admin/info/app.js"></script>
+      <script src="scripts/dashboards/admin/info/controllers/index.js"></script>
+      <script src="scripts/dashboards/admin/instance/app.js"></script>
+      <script src="scripts/dashboards/admin/instance/controllers/index.js"></script>
+    </div>
 </body>
 </html>
