Add new sub state for instance detail
Change-Id: I999f4ed512a94b309bcf553e6f4a2c531e414e62

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
       <script src="scripts/dashboards/admin/info/controllers/index.js"></script>
       <script src="scripts/dashboards/admin/instance/app.js"></script>
       <script src="scripts/dashboards/admin/instance/controllers/index.js"></script>
+      <script src="scripts/dashboards/admin/instance/controllers/detail.js"></script>
     </div>
 </body>
 </html>
