Add detail page for instance
Optimize instance detail in detail_panel.
Add multi route for instance detail: overview, log, console, monitor

Change-Id: Ia5a82e00cae564b3e85139cbc120100cb3030b1a

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/top_bar.css">
     <link rel="stylesheet" href="styles/instances.css">
+    <link rel="stylesheet" href="styles/ng-grid-custom-style.css">
     <!-- endbuild -->
   </head>
   <body ng-app="Cross">
