--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
       <script src="scripts/dashboards/admin/instance/app.js"></script>
       <script src="scripts/dashboards/admin/instance/controllers/index.js"></script>
       <script src="scripts/dashboards/admin/instance/controllers/detail.js"></script>
+      <script src="scripts/dashboards/admin/instance/controllers/log.js"></script>
     </div>
 </body>
 </html>
